fixed footer margin on mobile view

--- a/css/mediaquery.css
+++ b/css/mediaquery.css
@@ -43,10 +43,6 @@
 		width: 100%;
 	}
 
-	footer {
-		margin-bottom: 8em !important;
-	}
-
 	.flex-start {
 		display: block;
 	}
